# skin_problem_detection

./: .gitignore  README.md  pyproject.toml
src/src/: llm_utils.py  main.py
training_code/: Train_YOLOv12_SkinProblem.ipynb
